# exercise1-markaren

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Include/: Greet.h  Person.h
